# capproof

./: .gitignore  04_capability_and_proof_model.md  05_formal_model_and_theorems.md  07_authlaunderbench_design.md  09_baselines_ablations_adaptive.md  10_expected_results_and_success_criteria.md  11_limitations_ethics_and_tcb.md  12_related_work_positioning.md  13_usenix_acceptance_checklist.md  14_rebuttal_preparation.md  ARTIFACT_RELEASE_MANIFEST.json  ARTIFACT_RELEASE_MANIFEST.md  AUTHSPEC_FAITHFULNESS_GATE.md  CLAIMS_AND_NON_CLAIMS.md  CLEANROOM_REPRODUCTION.md  EVALUATOR_README.md  FINAL_ARTIFACT_CHECKSUMS.json  FINAL_ARTIFACT_CHECKSUMS.md  FINAL_CLAIMS_EVIDENCE_TABLE.json  FINAL_CLAIMS_EVIDENCE_TABLE.md  FINAL_REPRODUCTION_COMMANDS.md  FINAL_SECRET_HYGIENE_REPORT.md  IMPLEMENTATION_STATUS.md  KILL_TEST_PLAN.md  LICENSE  Makefile  PROJECT_HANDOFF_STAGE0_TO_31M.md  PROJECT_HANDOFF_STAGE0_TO_32H.md  PROJECT_HANDOFF_STAGE0_TO_32R.md  PROJECT_HANDOFF_STAGE0_TO_33R.md  PROJECT_HANDOFF_STAGE0_TO_33S.md  PROJECT_HANDOFF_STAGE0_TO_34H.md  PROJECT_HANDOFF_STAGE0_TO_34O.md  PROJECT_HANDOFF_STAGE0_TO_35UX.md  PROJECT_HANDOFF_STAGE0_TO_36ASK.md  PROJECT_HANDOFF_STAGE0_TO_36R.md  PROJECT_HANDOFF_STAGE0_TO_37PKG.md  PROJECT_HANDOFF_STAGE0_TO_38REAL.md  PROJECT_HANDOFF_STAGE0_TO_39RT.md  PROJECT_HANDOFF_STAGE0_TO_40RB.md  (+57 more)
agent_coverage_audit/: agent_mcp_client_matrix.json  agent_mcp_client_matrix.md  agent_runtime_bootstrap_matrix.json  agent_runtime_bootstrap_matrix.md  agent_runtime_bootstrap_report.md  agent_runtime_bootstrap_summary.json  agent_runtime_gate_matrix.json  (+12 more)
(+984 files in other folders)
